// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SpotifyWebPlayer > Device listeners > should handle \`player_state_changed\` 1`] = `
<div
  class="PlayerRSWP"
  data-component-name="Player"
  data-ready="true"
  style="background: rgb(255, 255, 255); min-height: 80px;"
>
  <div
    class=" _WrapperRSWP __1g3et1y"
    data-component-name="Wrapper"
  >
    <div
      class="rswp__active _InfoRSWP __1jmym9x"
      data-component-name="Info"
    >
      <a
        aria-label="Main Theme From Trouble Man on SPOTIFY"
        href="https://open.spotify.com/track/6KUjwoHktuX3du8laPVfO8"
        rel="noreferrer"
        target="_blank"
        title="Main Theme From Trouble Man on SPOTIFY"
      >
        <img
          alt="Main Theme From Trouble Man"
          src="https://i.scdn.co/image/10b3bd8afaf3dfa1f302b8f58e059e9802144052"
        />
      </a>
      <div
        class=" _ContentWrapperRSWP __1c53jt9"
      >
        <div
          class=" _ContentRSWP __1of0817"
        >
          <div
            data-type="title-artist-wrapper"
          >
            <div>
              <p>
                <span>
                  <a
                    aria-label="Main Theme From Trouble Man on SPOTIFY"
                    href="https://open.spotify.com/track/6KUjwoHktuX3du8laPVfO8"
                    rel="noreferrer"
                    target="_blank"
                    title="Main Theme From Trouble Man on SPOTIFY"
                  >
                    Main Theme From Trouble Man
                  </a>
                </span>
              </p>
              <p
                title="Marvin Gaye"
              >
                <span>
                  <a
                    aria-label="Marvin Gaye on SPOTIFY"
                    href="https://open.spotify.com/artist/3koiLjNrgRTNbOwViDipeA"
                    rel="noreferrer"
                    target="_blank"
                    title="Marvin Gaye on SPOTIFY"
                  >
                    Marvin Gaye
                  </a>
                </span>
              </p>
            </div>
          </div>
        </div>
        <a
          aria-label="Play on Spotify"
          href="https://open.spotify.com/track/6KUjwoHktuX3du8laPVfO8"
          rel="noreferrer"
          target="_blank"
        >
          <svg
            height="1em"
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 512 160"
            width="3.2em"
          >
            <path
              d="M79.655 0C35.664 0 0 35.663 0 79.654c0 43.993 35.664 79.653 79.655 79.653 43.996 0 79.656-35.66 79.656-79.653 0-43.988-35.66-79.65-79.657-79.65L79.655 0Zm36.53 114.884a4.963 4.963 0 0 1-6.83 1.646c-18.702-11.424-42.246-14.011-69.973-7.676a4.967 4.967 0 0 1-5.944-3.738 4.958 4.958 0 0 1 3.734-5.945c30.343-6.933 56.37-3.948 77.367 8.884a4.965 4.965 0 0 1 1.645 6.83Zm9.75-21.689c-1.799 2.922-5.622 3.845-8.543 2.047-21.41-13.16-54.049-16.972-79.374-9.284a6.219 6.219 0 0 1-7.75-4.138 6.22 6.22 0 0 1 4.141-7.745c28.929-8.778 64.892-4.526 89.48 10.583 2.92 1.798 3.843 5.622 2.045 8.538Zm.836-22.585C101.1 55.362 58.742 53.96 34.231 61.4c-3.936 1.194-8.098-1.028-9.29-4.964a7.453 7.453 0 0 1 4.965-9.294c28.137-8.542 74.912-6.892 104.469 10.655a7.441 7.441 0 0 1 2.606 10.209c-2.092 3.54-6.677 4.707-10.206 2.605h-.004Zm89.944 2.922c-13.754-3.28-16.198-5.581-16.198-10.418 0-4.57 4.299-7.645 10.7-7.645 6.202 0 12.347 2.336 18.796 7.143.19.145.437.203.675.165a.888.888 0 0 0 .6-.367l6.715-9.466a.903.903 0 0 0-.171-1.225c-7.676-6.157-16.313-9.15-26.415-9.15-14.848 0-25.225 8.911-25.225 21.662 0 13.673 8.95 18.515 24.417 22.252 13.155 3.031 15.38 5.57 15.38 10.11 0 5.032-4.49 8.161-11.718 8.161-8.028 0-14.582-2.71-21.906-9.046a.932.932 0 0 0-.656-.218.89.89 0 0 0-.619.313l-7.533 8.96a.906.906 0 0 0 .086 1.256c8.522 7.61 19.004 11.624 30.323 11.624 16 0 26.339-8.742 26.339-22.277.028-11.421-6.81-17.746-23.561-21.821l-.029-.013Zm59.792-13.564c-6.934 0-12.622 2.732-17.321 8.33v-6.3c0-.498-.4-.903-.894-.903h-12.318a.899.899 0 0 0-.894.902v70.009c0 .494.4.903.894.903h12.318a.901.901 0 0 0 .894-.903v-22.097c4.699 5.26 10.387 7.838 17.32 7.838 12.89 0 25.94-9.92 25.94-28.886.019-18.97-13.032-28.894-25.93-28.894l-.01.001Zm11.614 28.893c0 9.653-5.945 16.397-14.468 16.397-8.418 0-14.772-7.048-14.772-16.397 0-9.35 6.354-16.397 14.772-16.397 8.38 0 14.468 6.893 14.468 16.396Zm47.759-28.893c-16.598 0-29.601 12.78-29.601 29.1 0 16.143 12.917 28.784 29.401 28.784 16.655 0 29.696-12.736 29.696-28.991 0-16.2-12.955-28.89-29.496-28.89v-.003Zm0 45.385c-8.827 0-15.485-7.096-15.485-16.497 0-9.444 6.43-16.298 15.285-16.298 8.884 0 15.58 7.093 15.58 16.504 0 9.443-6.468 16.291-15.38 16.291Zm64.937-44.258h-13.554V47.24c0-.497-.4-.902-.894-.902H374.05a.906.906 0 0 0-.904.902v13.855h-5.916a.899.899 0 0 0-.894.902v10.584a.9.9 0 0 0 .894.903h5.916v27.39c0 11.062 5.508 16.674 16.38 16.674 4.413 0 8.075-.914 11.528-2.873a.88.88 0 0 0 .457-.78v-10.083a.896.896 0 0 0-.428-.76.873.873 0 0 0-.876-.039c-2.368 1.19-4.66 1.741-7.229 1.741-3.947 0-5.716-1.798-5.716-5.812V73.49h13.554a.899.899 0 0 0 .894-.903V62.003a.873.873 0 0 0-.884-.903l-.01-.005Zm47.217.054v-1.702c0-5.006 1.921-7.238 6.22-7.238 2.57 0 4.633.51 6.945 1.28a.895.895 0 0 0 1.18-.858l-.001-10.377a.891.891 0 0 0-.637-.865c-2.435-.726-5.555-1.47-10.235-1.47-11.367 0-17.388 6.405-17.388 18.516v2.606h-5.916a.906.906 0 0 0-.904.902v10.638c0 .497.41.903.904.903h5.916v42.237c0 .504.41.904.904.904h12.308c.504 0 .904-.4.904-.904V73.487h11.5l17.616 42.234c-1.998 4.433-3.967 5.317-6.65 5.317-2.168 0-4.46-.646-6.79-1.93a.98.98 0 0 0-.714-.067.896.896 0 0 0-.533.485l-4.175 9.16a.9.9 0 0 0 .39 1.17c4.356 2.359 8.284 3.367 13.145 3.367 9.093 0 14.125-4.242 18.548-15.637l21.364-55.204a.88.88 0 0 0-.095-.838.878.878 0 0 0-.733-.392h-12.822a.901.901 0 0 0-.856.605l-13.136 37.509-14.382-37.534a.898.898 0 0 0-.837-.58h-21.04v-.003Zm-27.375-.054h-12.318a.907.907 0 0 0-.903.902v53.724c0 .504.409.904.903.904h12.318c.495 0 .904-.4.904-.904v-53.72a.9.9 0 0 0-.904-.903v-.003Zm-6.088-24.464c-4.88 0-8.836 3.95-8.836 8.828a8.835 8.835 0 0 0 8.836 8.836c4.88 0 8.827-3.954 8.827-8.836a8.83 8.83 0 0 0-8.827-8.828Z"
              fill="#000000"
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      class=" _ControlsRSWP __11aa6ep"
      data-component-name="Controls"
      data-playing="true"
    >
      <div
        class=" _ControlsButtonsRSWP __a3qe0k"
      >
        <div
          class="rswp__devices"
        >
          <div>
            <div
              class=" _DevicesRSWP __n5xkwq"
              data-component-name="Devices"
              data-device-id="19ks98hfbxc53vh34jd"
            >
              <button
                aria-label="Devices"
                class="ButtonRSWP"
                title="Devices"
                type="button"
              >
                <svg
                  height="1em"
                  preserveAspectRatio="xMidYMid"
                  viewBox="0 0 64 64"
                  width="1em"
                >
                  <path
                    d="M57 4c3.864 0 7 3.136 7 7v42a7 7 0 0 1-7 7H31a7 7 0 0 1-7-7V11c0-3.864 3.136-7 7-7h26ZM16 54v6H8v-6h8Zm41-44H31a1 1 0 0 0-1 1v42a1 1 0 0 0 1 1h26a1 1 0 0 0 1-1V11a1 1 0 0 0-1-1ZM44 32a8 8 0 1 1 0 16 8 8 0 0 1 0-16ZM16 4v6H7a1 1 0 0 0-1 1v26a1 1 0 0 0 1 1h9v6H7a7 7 0 0 1-7-7V11c0-3.864 3.136-7 7-7h9Zm28 12a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div />
        <div>
          <button
            aria-label="Previous"
            class="ButtonRSWP _ControlsButtonRSWP __3hmsj"
            title="Previous"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M10.514 0a3.2 3.2 0 0 1 3.2 3.2v23.543L59.2.489A3.2 3.2 0 0 1 64 3.255V60.74a3.2 3.2 0 0 1-4.8 2.774L13.714 37.253V60.8a3.2 3.2 0 0 1-3.2 3.2H3.2A3.2 3.2 0 0 1 0 60.8V3.2A3.2 3.2 0 0 1 3.2 0h7.314Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            aria-label="Pause"
            class="ButtonRSWP rswp__toggle _ControlsButtonRSWP __3hmsj"
            title="Pause"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm-5.4 18h-5.2a1.4 1.4 0 0 0-1.4 1.4v25.2a1.4 1.4 0 0 0 1.4 1.4h5.2a1.4 1.4 0 0 0 1.4-1.4V19.4a1.4 1.4 0 0 0-1.4-1.4Zm16 0h-5.2a1.4 1.4 0 0 0-1.4 1.4v25.2a1.4 1.4 0 0 0 1.4 1.4h5.2a1.4 1.4 0 0 0 1.4-1.4V19.4a1.4 1.4 0 0 0-1.4-1.4Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            aria-label="Next"
            class="ButtonRSWP _ControlsButtonRSWP __3hmsj"
            title="Next"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M53.486 0a3.2 3.2 0 0 0-3.2 3.2v23.543L4.8.489A3.2 3.2 0 0 0 0 3.255V60.74a3.2 3.2 0 0 0 4.8 2.774l45.486-26.262V60.8a3.2 3.2 0 0 0 3.2 3.2H60.8a3.2 3.2 0 0 0 3.2-3.2V3.2A3.2 3.2 0 0 0 60.8 0h-7.314Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div />
        <div
          class="rswp__volume"
        >
          <div
            class=" _VolumeInlineRSWP __a3qe0k"
            data-component-name="Volume"
            data-value="1"
          >
            <span>
              <svg
                data-component-name="VolumeHigh"
                height="1em"
                preserveAspectRatio="xMidYMid"
                viewBox="0 0 64 64"
                width="1em"
              >
                <path
                  d="M37.963 3.402a2.989 2.989 0 0 1 1.5 2.596v52a3 3 0 0 1-4.5 2.6l-27.7-16C.32 40.572-2.06 31.688 1.943 24.73a14.556 14.556 0 0 1 5.32-5.328l27.7-16a3 3 0 0 1 3 0ZM45 9.542a23.008 23.008 0 0 1 0 44.912V48.25a17.008 17.008 0 0 0 0-32.508Zm-11.532 1.656-23.2 13.4a8.556 8.556 0 0 0 0 14.8l23.2 13.4v-41.6ZM45 22.238a11 11 0 0 1 0 19.52v-19.52Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div>
              <div
                class="volume"
                data-component-name="volume-bar"
                style="box-sizing: border-box; display: inline-block; padding: 0px; transition: height 0.4s, width 0.4s; height: 4px; width: 100%;"
              >
                <div
                  class="volume__track"
                  role="presentation"
                  style="background-color: rgb(204, 204, 204); border-radius: 4px; box-sizing: border-box; height: 4px; position: relative; width: 100%;"
                >
                  <div
                    class="volume__range"
                    style="width: 100%; background-color: rgb(102, 102, 102); border-radius: 4px; position: absolute; height: 100%; top: 0px;"
                  />
                  <div
                    role="presentation"
                    style="box-sizing: border-box; height: 4px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 100%; bottom: 0%;"
                  >
                    <span
                      aria-label="slider handle"
                      aria-orientation="horizontal"
                      aria-valuemax="100"
                      aria-valuemin="0"
                      aria-valuenow="100"
                      class="volume__thumb"
                      role="slider"
                      style="background-color: rgb(0, 0, 0); border: 0px; border-radius: 50%; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 10px; left: -5px; top: -3px; width: 10px;"
                      tabindex="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" _SliderRSWP __q14q70"
        data-component-name="Slider"
        data-position="0"
      >
        <div
          class="rswp_progress"
        >
          0:00
        </div>
        <div
          class="slider"
          data-component-name="progress-bar"
          style="box-sizing: border-box; display: inline-block; padding: 0px; transition: height 0.4s, width 0.4s; height: 4px; width: 100%;"
        >
          <div
            class="slider__track"
            role="presentation"
            style="background-color: rgb(204, 204, 204); border-radius: 4px; box-sizing: border-box; height: 4px; position: relative; width: 100%;"
          >
            <div
              class="slider__range"
              style="width: 0%; background-color: rgb(102, 102, 102); border-radius: 4px; position: absolute; height: 100%; top: 0px;"
            />
            <div
              role="presentation"
              style="box-sizing: border-box; height: 4px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 0%; bottom: 0%;"
            >
              <span
                aria-label="slider handle"
                aria-orientation="horizontal"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="slider__thumb"
                role="slider"
                style="background-color: rgb(0, 0, 0); border: 0px; border-radius: 50%; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 10px; left: -5px; top: -3px; width: 10px;"
                tabindex="0"
              />
            </div>
          </div>
        </div>
        <div
          class="rswp_duration"
        >
          2:31
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SpotifyWebPlayer > Device listeners > should handle \`ready\` 1`] = `
<div
  class="PlayerRSWP"
  data-component-name="Player"
  data-ready="true"
  style="background: rgb(255, 255, 255); min-height: 80px;"
>
  <div
    class=" _WrapperRSWP __1g3et1y"
    data-component-name="Wrapper"
  >
    <div />
    <div
      class=" _ControlsRSWP __11aa6ep"
      data-component-name="Controls"
      data-playing="false"
    >
      <div
        class=" _ControlsButtonsRSWP __a3qe0k"
      >
        <div
          class="rswp__devices"
        >
          <div>
            <div
              class=" _DevicesRSWP __n5xkwq"
              data-component-name="Devices"
              data-device-id="19ks98hfbxc53vh34jd"
            >
              <button
                aria-label="Devices"
                class="ButtonRSWP"
                title="Devices"
                type="button"
              >
                <svg
                  height="1em"
                  preserveAspectRatio="xMidYMid"
                  viewBox="0 0 64 64"
                  width="1em"
                >
                  <path
                    d="M57 4c3.864 0 7 3.136 7 7v42a7 7 0 0 1-7 7H31a7 7 0 0 1-7-7V11c0-3.864 3.136-7 7-7h26ZM16 54v6H8v-6h8Zm41-44H31a1 1 0 0 0-1 1v42a1 1 0 0 0 1 1h26a1 1 0 0 0 1-1V11a1 1 0 0 0-1-1ZM44 32a8 8 0 1 1 0 16 8 8 0 0 1 0-16ZM16 4v6H7a1 1 0 0 0-1 1v26a1 1 0 0 0 1 1h9v6H7a7 7 0 0 1-7-7V11c0-3.864 3.136-7 7-7h9Zm28 12a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div />
        <div>
          <button
            aria-label="Previous"
            class="ButtonRSWP _ControlsButtonRSWP __3hmsj"
            disabled=""
            title="Previous"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M10.514 0a3.2 3.2 0 0 1 3.2 3.2v23.543L59.2.489A3.2 3.2 0 0 1 64 3.255V60.74a3.2 3.2 0 0 1-4.8 2.774L13.714 37.253V60.8a3.2 3.2 0 0 1-3.2 3.2H3.2A3.2 3.2 0 0 1 0 60.8V3.2A3.2 3.2 0 0 1 3.2 0h7.314Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            aria-label="Play"
            class="ButtonRSWP rswp__toggle _ControlsButtonRSWP __3hmsj"
            title="Play"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm-7.61 18.188c-.435.251-.702.715-.701 1.216v25.194a1.402 1.402 0 0 0 2.104 1.214L47.61 33.214a1.402 1.402 0 0 0 0-2.428L25.793 18.188c-.435-.25-.97-.25-1.404 0Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            aria-label="Next"
            class="ButtonRSWP _ControlsButtonRSWP __3hmsj"
            disabled=""
            title="Next"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M53.486 0a3.2 3.2 0 0 0-3.2 3.2v23.543L4.8.489A3.2 3.2 0 0 0 0 3.255V60.74a3.2 3.2 0 0 0 4.8 2.774l45.486-26.262V60.8a3.2 3.2 0 0 0 3.2 3.2H60.8a3.2 3.2 0 0 0 3.2-3.2V3.2A3.2 3.2 0 0 0 60.8 0h-7.314Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div />
        <div
          class="rswp__volume"
        >
          <div
            class=" _VolumeInlineRSWP __a3qe0k"
            data-component-name="Volume"
            data-value="1"
          >
            <span>
              <svg
                data-component-name="VolumeHigh"
                height="1em"
                preserveAspectRatio="xMidYMid"
                viewBox="0 0 64 64"
                width="1em"
              >
                <path
                  d="M37.963 3.402a2.989 2.989 0 0 1 1.5 2.596v52a3 3 0 0 1-4.5 2.6l-27.7-16C.32 40.572-2.06 31.688 1.943 24.73a14.556 14.556 0 0 1 5.32-5.328l27.7-16a3 3 0 0 1 3 0ZM45 9.542a23.008 23.008 0 0 1 0 44.912V48.25a17.008 17.008 0 0 0 0-32.508Zm-11.532 1.656-23.2 13.4a8.556 8.556 0 0 0 0 14.8l23.2 13.4v-41.6ZM45 22.238a11 11 0 0 1 0 19.52v-19.52Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div>
              <div
                class="volume"
                data-component-name="volume-bar"
                style="box-sizing: border-box; display: inline-block; padding: 0px; transition: height 0.4s, width 0.4s; height: 4px; width: 100%;"
              >
                <div
                  class="volume__track"
                  role="presentation"
                  style="background-color: rgb(204, 204, 204); border-radius: 4px; box-sizing: border-box; height: 4px; position: relative; width: 100%;"
                >
                  <div
                    class="volume__range"
                    style="width: 100%; background-color: rgb(102, 102, 102); border-radius: 4px; position: absolute; height: 100%; top: 0px;"
                  />
                  <div
                    role="presentation"
                    style="box-sizing: border-box; height: 4px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 100%; bottom: 0%;"
                  >
                    <span
                      aria-label="slider handle"
                      aria-orientation="horizontal"
                      aria-valuemax="100"
                      aria-valuemin="0"
                      aria-valuenow="100"
                      class="volume__thumb"
                      role="slider"
                      style="background-color: rgb(0, 0, 0); border: 0px; border-radius: 50%; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 10px; left: -5px; top: -3px; width: 10px;"
                      tabindex="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" _SliderRSWP __q14q70"
        data-component-name="Slider"
        data-position="0"
      >
        <div
          class="rswp_progress"
        >
          0:00
        </div>
        <div
          class="slider"
          data-component-name="progress-bar"
          style="box-sizing: border-box; display: inline-block; padding: 0px; transition: height 0.4s, width 0.4s; height: 4px; width: 100%;"
        >
          <div
            class="slider__track"
            role="presentation"
            style="background-color: rgb(204, 204, 204); border-radius: 4px; box-sizing: border-box; height: 4px; position: relative; width: 100%;"
          >
            <div
              class="slider__range"
              style="width: 0%; background-color: rgb(102, 102, 102); border-radius: 4px; position: absolute; height: 100%; top: 0px;"
            />
            <div
              role="presentation"
              style="box-sizing: border-box; height: 4px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 0%; bottom: 0%;"
            >
              <span
                aria-label="slider handle"
                aria-orientation="horizontal"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="slider__thumb"
                role="slider"
                style="background-color: rgb(0, 0, 0); border: 0px; border-radius: 50%; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 10px; left: -5px; top: -3px; width: 10px;"
                tabindex="0"
              />
            </div>
          </div>
        </div>
        <div
          class="rswp_duration"
        >
          0:00
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SpotifyWebPlayer > Error listeners > should handle \`account_error\` 1`] = `
<div
  class="PlayerRSWP"
  data-component-name="Player"
  data-ready="false"
  style="background: rgb(255, 255, 255); min-height: 80px;"
>
  <div
    class=" _ErrorRSWP __1rvrb20"
    data-component-name="ErrorMessage"
  >
    Failed to validate Spotify account
  </div>
</div>
`;

exports[`SpotifyWebPlayer > Error listeners > should handle \`authentication_error\` > With Error 1`] = `
<div
  class="PlayerRSWP"
  data-component-name="Player"
  data-ready="false"
  style="background: rgb(255, 255, 255); min-height: 80px;"
>
  <div
    class=" _ErrorRSWP __1rvrb20"
    data-component-name="ErrorMessage"
  >
    Failed to authenticate
  </div>
</div>
`;

exports[`SpotifyWebPlayer > Error listeners > should handle \`initialization_error\` 1`] = `
<div
  class="PlayerRSWP"
  data-component-name="Player"
  data-ready="true"
  style="background: rgb(255, 255, 255); min-height: 80px;"
>
  <div
    class=" _WrapperRSWP __1g3et1y"
    data-component-name="Wrapper"
  >
    <div />
    <div
      class=" _ControlsRSWP __11aa6ep"
      data-component-name="Controls"
      data-playing="false"
    >
      <div
        class=" _ControlsButtonsRSWP __a3qe0k"
      >
        <div
          class="rswp__devices"
        >
          <div>
            <div
              class=" _DevicesRSWP __n5xkwq"
              data-component-name="Devices"
              data-device-id=""
            >
              <div>
                <p>
                  Select other device
                </p>
                <button
                  aria-label="Test Player"
                  class="ButtonRSWP"
                  data-id="df17372ghs982js892js"
                  type="button"
                >
                  <svg
                    height="1em"
                    preserveAspectRatio="xMidYMid"
                    viewBox="0 0 64 64"
                    width="1em"
                  >
                    <path
                      d="M7.226 10.323a7.228 7.228 0 0 1 7.226-7.226h35.096a7.228 7.228 0 0 1 7.226 7.226V37.16a7.226 7.226 0 0 1-7.226 7.226H14.452a7.226 7.226 0 0 1-7.226-7.226V10.323Zm7.226-1.033c-.57 0-1.033.462-1.033 1.033V37.16c0 .57.463 1.033 1.033 1.033h35.096c.57 0 1.033-.463 1.033-1.033V10.323c0-.57-.463-1.033-1.033-1.033H14.452ZM0 57.806a3.097 3.097 0 0 1 3.097-3.096h57.806a3.097 3.097 0 0 1 0 6.193H3.097A3.097 3.097 0 0 1 0 57.806Z"
                      fill="currentColor"
                    />
                  </svg>
                  <span>
                    Test Player
                  </span>
                </button>
                <span />
              </div>
              <button
                aria-label="Devices"
                class="ButtonRSWP"
                title="Devices"
                type="button"
              >
                <svg
                  height="1em"
                  preserveAspectRatio="xMidYMid"
                  viewBox="0 0 64 64"
                  width="1em"
                >
                  <path
                    d="M57 4c3.864 0 7 3.136 7 7v42a7 7 0 0 1-7 7H31a7 7 0 0 1-7-7V11c0-3.864 3.136-7 7-7h26ZM16 54v6H8v-6h8Zm41-44H31a1 1 0 0 0-1 1v42a1 1 0 0 0 1 1h26a1 1 0 0 0 1-1V11a1 1 0 0 0-1-1ZM44 32a8 8 0 1 1 0 16 8 8 0 0 1 0-16ZM16 4v6H7a1 1 0 0 0-1 1v26a1 1 0 0 0 1 1h9v6H7a7 7 0 0 1-7-7V11c0-3.864 3.136-7 7-7h9Zm28 12a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div />
        <div>
          <button
            aria-label="Previous"
            class="ButtonRSWP _ControlsButtonRSWP __3hmsj"
            title="Previous"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M10.514 0a3.2 3.2 0 0 1 3.2 3.2v23.543L59.2.489A3.2 3.2 0 0 1 64 3.255V60.74a3.2 3.2 0 0 1-4.8 2.774L13.714 37.253V60.8a3.2 3.2 0 0 1-3.2 3.2H3.2A3.2 3.2 0 0 1 0 60.8V3.2A3.2 3.2 0 0 1 3.2 0h7.314Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            aria-label="Play"
            class="ButtonRSWP rswp__toggle _ControlsButtonRSWP __3hmsj"
            title="Play"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm-7.61 18.188c-.435.251-.702.715-.701 1.216v25.194a1.402 1.402 0 0 0 2.104 1.214L47.61 33.214a1.402 1.402 0 0 0 0-2.428L25.793 18.188c-.435-.25-.97-.25-1.404 0Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            aria-label="Next"
            class="ButtonRSWP _ControlsButtonRSWP __3hmsj"
            title="Next"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M53.486 0a3.2 3.2 0 0 0-3.2 3.2v23.543L4.8.489A3.2 3.2 0 0 0 0 3.255V60.74a3.2 3.2 0 0 0 4.8 2.774l45.486-26.262V60.8a3.2 3.2 0 0 0 3.2 3.2H60.8a3.2 3.2 0 0 0 3.2-3.2V3.2A3.2 3.2 0 0 0 60.8 0h-7.314Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div />
      </div>
      <div
        class=" _SliderRSWP __q14q70"
        data-component-name="Slider"
        data-position="0"
      >
        <div
          class="rswp_progress"
        >
          0:00
        </div>
        <div
          class="slider"
          data-component-name="progress-bar"
          style="box-sizing: border-box; display: inline-block; padding: 0px; transition: height 0.4s, width 0.4s; height: 4px; width: 100%;"
        >
          <div
            class="slider__track"
            role="presentation"
            style="background-color: rgb(204, 204, 204); border-radius: 4px; box-sizing: border-box; height: 4px; position: relative; width: 100%;"
          >
            <div
              class="slider__range"
              style="width: 0%; background-color: rgb(102, 102, 102); border-radius: 4px; position: absolute; height: 100%; top: 0px;"
            />
            <div
              role="presentation"
              style="box-sizing: border-box; height: 4px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 0%; bottom: 0%;"
            >
              <span
                aria-label="slider handle"
                aria-orientation="horizontal"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="slider__thumb"
                role="slider"
                style="background-color: rgb(0, 0, 0); border: 0px; border-radius: 50%; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 10px; left: -5px; top: -3px; width: 10px;"
                tabindex="0"
              />
            </div>
          </div>
        </div>
        <div
          class="rswp_duration"
        >
          0:00
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SpotifyWebPlayer > Error listeners > should handle \`playback_error\` 1`] = `
<div
  class="PlayerRSWP"
  data-component-name="Player"
  data-ready="true"
  style="background: rgb(255, 255, 255); min-height: 80px;"
>
  <div
    class=" _WrapperRSWP __1g3et1y"
    data-component-name="Wrapper"
  >
    <div
      class="rswp__active _InfoRSWP __1jmym9x"
      data-component-name="Info"
    >
      <a
        aria-label="Main Theme From Trouble Man on SPOTIFY"
        href="https://open.spotify.com/track/6KUjwoHktuX3du8laPVfO8"
        rel="noreferrer"
        target="_blank"
        title="Main Theme From Trouble Man on SPOTIFY"
      >
        <img
          alt="Main Theme From Trouble Man"
          src="https://i.scdn.co/image/10b3bd8afaf3dfa1f302b8f58e059e9802144052"
        />
      </a>
      <div
        class=" _ContentWrapperRSWP __1c53jt9"
      >
        <div
          class=" _ContentRSWP __1of0817"
        >
          <div
            data-type="title-artist-wrapper"
          >
            <div>
              <p>
                <span>
                  <a
                    aria-label="Main Theme From Trouble Man on SPOTIFY"
                    href="https://open.spotify.com/track/6KUjwoHktuX3du8laPVfO8"
                    rel="noreferrer"
                    target="_blank"
                    title="Main Theme From Trouble Man on SPOTIFY"
                  >
                    Main Theme From Trouble Man
                  </a>
                </span>
              </p>
              <p
                title="Marvin Gaye"
              >
                <span>
                  <a
                    aria-label="Marvin Gaye on SPOTIFY"
                    href="https://open.spotify.com/artist/3koiLjNrgRTNbOwViDipeA"
                    rel="noreferrer"
                    target="_blank"
                    title="Marvin Gaye on SPOTIFY"
                  >
                    Marvin Gaye
                  </a>
                </span>
              </p>
            </div>
          </div>
        </div>
        <a
          aria-label="Play on Spotify"
          href="https://open.spotify.com/track/6KUjwoHktuX3du8laPVfO8"
          rel="noreferrer"
          target="_blank"
        >
          <svg
            height="1em"
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 512 160"
            width="3.2em"
          >
            <path
              d="M79.655 0C35.664 0 0 35.663 0 79.654c0 43.993 35.664 79.653 79.655 79.653 43.996 0 79.656-35.66 79.656-79.653 0-43.988-35.66-79.65-79.657-79.65L79.655 0Zm36.53 114.884a4.963 4.963 0 0 1-6.83 1.646c-18.702-11.424-42.246-14.011-69.973-7.676a4.967 4.967 0 0 1-5.944-3.738 4.958 4.958 0 0 1 3.734-5.945c30.343-6.933 56.37-3.948 77.367 8.884a4.965 4.965 0 0 1 1.645 6.83Zm9.75-21.689c-1.799 2.922-5.622 3.845-8.543 2.047-21.41-13.16-54.049-16.972-79.374-9.284a6.219 6.219 0 0 1-7.75-4.138 6.22 6.22 0 0 1 4.141-7.745c28.929-8.778 64.892-4.526 89.48 10.583 2.92 1.798 3.843 5.622 2.045 8.538Zm.836-22.585C101.1 55.362 58.742 53.96 34.231 61.4c-3.936 1.194-8.098-1.028-9.29-4.964a7.453 7.453 0 0 1 4.965-9.294c28.137-8.542 74.912-6.892 104.469 10.655a7.441 7.441 0 0 1 2.606 10.209c-2.092 3.54-6.677 4.707-10.206 2.605h-.004Zm89.944 2.922c-13.754-3.28-16.198-5.581-16.198-10.418 0-4.57 4.299-7.645 10.7-7.645 6.202 0 12.347 2.336 18.796 7.143.19.145.437.203.675.165a.888.888 0 0 0 .6-.367l6.715-9.466a.903.903 0 0 0-.171-1.225c-7.676-6.157-16.313-9.15-26.415-9.15-14.848 0-25.225 8.911-25.225 21.662 0 13.673 8.95 18.515 24.417 22.252 13.155 3.031 15.38 5.57 15.38 10.11 0 5.032-4.49 8.161-11.718 8.161-8.028 0-14.582-2.71-21.906-9.046a.932.932 0 0 0-.656-.218.89.89 0 0 0-.619.313l-7.533 8.96a.906.906 0 0 0 .086 1.256c8.522 7.61 19.004 11.624 30.323 11.624 16 0 26.339-8.742 26.339-22.277.028-11.421-6.81-17.746-23.561-21.821l-.029-.013Zm59.792-13.564c-6.934 0-12.622 2.732-17.321 8.33v-6.3c0-.498-.4-.903-.894-.903h-12.318a.899.899 0 0 0-.894.902v70.009c0 .494.4.903.894.903h12.318a.901.901 0 0 0 .894-.903v-22.097c4.699 5.26 10.387 7.838 17.32 7.838 12.89 0 25.94-9.92 25.94-28.886.019-18.97-13.032-28.894-25.93-28.894l-.01.001Zm11.614 28.893c0 9.653-5.945 16.397-14.468 16.397-8.418 0-14.772-7.048-14.772-16.397 0-9.35 6.354-16.397 14.772-16.397 8.38 0 14.468 6.893 14.468 16.396Zm47.759-28.893c-16.598 0-29.601 12.78-29.601 29.1 0 16.143 12.917 28.784 29.401 28.784 16.655 0 29.696-12.736 29.696-28.991 0-16.2-12.955-28.89-29.496-28.89v-.003Zm0 45.385c-8.827 0-15.485-7.096-15.485-16.497 0-9.444 6.43-16.298 15.285-16.298 8.884 0 15.58 7.093 15.58 16.504 0 9.443-6.468 16.291-15.38 16.291Zm64.937-44.258h-13.554V47.24c0-.497-.4-.902-.894-.902H374.05a.906.906 0 0 0-.904.902v13.855h-5.916a.899.899 0 0 0-.894.902v10.584a.9.9 0 0 0 .894.903h5.916v27.39c0 11.062 5.508 16.674 16.38 16.674 4.413 0 8.075-.914 11.528-2.873a.88.88 0 0 0 .457-.78v-10.083a.896.896 0 0 0-.428-.76.873.873 0 0 0-.876-.039c-2.368 1.19-4.66 1.741-7.229 1.741-3.947 0-5.716-1.798-5.716-5.812V73.49h13.554a.899.899 0 0 0 .894-.903V62.003a.873.873 0 0 0-.884-.903l-.01-.005Zm47.217.054v-1.702c0-5.006 1.921-7.238 6.22-7.238 2.57 0 4.633.51 6.945 1.28a.895.895 0 0 0 1.18-.858l-.001-10.377a.891.891 0 0 0-.637-.865c-2.435-.726-5.555-1.47-10.235-1.47-11.367 0-17.388 6.405-17.388 18.516v2.606h-5.916a.906.906 0 0 0-.904.902v10.638c0 .497.41.903.904.903h5.916v42.237c0 .504.41.904.904.904h12.308c.504 0 .904-.4.904-.904V73.487h11.5l17.616 42.234c-1.998 4.433-3.967 5.317-6.65 5.317-2.168 0-4.46-.646-6.79-1.93a.98.98 0 0 0-.714-.067.896.896 0 0 0-.533.485l-4.175 9.16a.9.9 0 0 0 .39 1.17c4.356 2.359 8.284 3.367 13.145 3.367 9.093 0 14.125-4.242 18.548-15.637l21.364-55.204a.88.88 0 0 0-.095-.838.878.878 0 0 0-.733-.392h-12.822a.901.901 0 0 0-.856.605l-13.136 37.509-14.382-37.534a.898.898 0 0 0-.837-.58h-21.04v-.003Zm-27.375-.054h-12.318a.907.907 0 0 0-.903.902v53.724c0 .504.409.904.903.904h12.318c.495 0 .904-.4.904-.904v-53.72a.9.9 0 0 0-.904-.903v-.003Zm-6.088-24.464c-4.88 0-8.836 3.95-8.836 8.828a8.835 8.835 0 0 0 8.836 8.836c4.88 0 8.827-3.954 8.827-8.836a8.83 8.83 0 0 0-8.827-8.828Z"
              fill="#000000"
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      class=" _ControlsRSWP __11aa6ep"
      data-component-name="Controls"
      data-playing="false"
    >
      <div
        class=" _ControlsButtonsRSWP __a3qe0k"
      >
        <div
          class="rswp__devices"
        >
          <div>
            <div
              class=" _DevicesRSWP __n5xkwq"
              data-component-name="Devices"
              data-device-id="19ks98hfbxc53vh34jd"
            />
          </div>
        </div>
        <div />
        <div>
          <button
            aria-label="Previous"
            class="ButtonRSWP _ControlsButtonRSWP __3hmsj"
            title="Previous"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M10.514 0a3.2 3.2 0 0 1 3.2 3.2v23.543L59.2.489A3.2 3.2 0 0 1 64 3.255V60.74a3.2 3.2 0 0 1-4.8 2.774L13.714 37.253V60.8a3.2 3.2 0 0 1-3.2 3.2H3.2A3.2 3.2 0 0 1 0 60.8V3.2A3.2 3.2 0 0 1 3.2 0h7.314Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            aria-label="Play"
            class="ButtonRSWP rswp__toggle _ControlsButtonRSWP __3hmsj"
            title="Play"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm-7.61 18.188c-.435.251-.702.715-.701 1.216v25.194a1.402 1.402 0 0 0 2.104 1.214L47.61 33.214a1.402 1.402 0 0 0 0-2.428L25.793 18.188c-.435-.25-.97-.25-1.404 0Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            aria-label="Next"
            class="ButtonRSWP _ControlsButtonRSWP __3hmsj"
            title="Next"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M53.486 0a3.2 3.2 0 0 0-3.2 3.2v23.543L4.8.489A3.2 3.2 0 0 0 0 3.255V60.74a3.2 3.2 0 0 0 4.8 2.774l45.486-26.262V60.8a3.2 3.2 0 0 0 3.2 3.2H60.8a3.2 3.2 0 0 0 3.2-3.2V3.2A3.2 3.2 0 0 0 60.8 0h-7.314Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div />
        <div
          class="rswp__volume"
        >
          <div
            class=" _VolumeInlineRSWP __a3qe0k"
            data-component-name="Volume"
            data-value="1"
          >
            <span>
              <svg
                data-component-name="VolumeHigh"
                height="1em"
                preserveAspectRatio="xMidYMid"
                viewBox="0 0 64 64"
                width="1em"
              >
                <path
                  d="M37.963 3.402a2.989 2.989 0 0 1 1.5 2.596v52a3 3 0 0 1-4.5 2.6l-27.7-16C.32 40.572-2.06 31.688 1.943 24.73a14.556 14.556 0 0 1 5.32-5.328l27.7-16a3 3 0 0 1 3 0ZM45 9.542a23.008 23.008 0 0 1 0 44.912V48.25a17.008 17.008 0 0 0 0-32.508Zm-11.532 1.656-23.2 13.4a8.556 8.556 0 0 0 0 14.8l23.2 13.4v-41.6ZM45 22.238a11 11 0 0 1 0 19.52v-19.52Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div>
              <div
                class="volume"
                data-component-name="volume-bar"
                style="box-sizing: border-box; display: inline-block; padding: 0px; transition: height 0.4s, width 0.4s; height: 4px; width: 100%;"
              >
                <div
                  class="volume__track"
                  role="presentation"
                  style="background-color: rgb(204, 204, 204); border-radius: 4px; box-sizing: border-box; height: 4px; position: relative; width: 100%;"
                >
                  <div
                    class="volume__range"
                    style="width: 100%; background-color: rgb(102, 102, 102); border-radius: 4px; position: absolute; height: 100%; top: 0px;"
                  />
                  <div
                    role="presentation"
                    style="box-sizing: border-box; height: 4px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 100%; bottom: 0%;"
                  >
                    <span
                      aria-label="slider handle"
                      aria-orientation="horizontal"
                      aria-valuemax="100"
                      aria-valuemin="0"
                      aria-valuenow="100"
                      class="volume__thumb"
                      role="slider"
                      style="background-color: rgb(0, 0, 0); border: 0px; border-radius: 50%; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 10px; left: -5px; top: -3px; width: 10px;"
                      tabindex="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" _SliderRSWP __q14q70"
        data-component-name="Slider"
        data-position="0"
      >
        <div
          class="rswp_progress"
        >
          0:00
        </div>
        <div
          class="slider"
          data-component-name="progress-bar"
          style="box-sizing: border-box; display: inline-block; padding: 0px; transition: height 0.4s, width 0.4s; height: 4px; width: 100%;"
        >
          <div
            class="slider__track"
            role="presentation"
            style="background-color: rgb(204, 204, 204); border-radius: 4px; box-sizing: border-box; height: 4px; position: relative; width: 100%;"
          >
            <div
              class="slider__range"
              style="width: 0%; background-color: rgb(102, 102, 102); border-radius: 4px; position: absolute; height: 100%; top: 0px;"
            />
            <div
              role="presentation"
              style="box-sizing: border-box; height: 4px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 0%; bottom: 0%;"
            >
              <span
                aria-label="slider handle"
                aria-orientation="horizontal"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="slider__thumb"
                role="slider"
                style="background-color: rgb(0, 0, 0); border: 0px; border-radius: 50%; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 10px; left: -5px; top: -3px; width: 10px;"
                tabindex="0"
              />
            </div>
          </div>
        </div>
        <div
          class="rswp_duration"
        >
          2:31
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SpotifyWebPlayer > With "compact" layout > should render properly 1`] = `
<div
  class="PlayerRSWP"
  data-component-name="Player"
  data-ready="true"
  style="background: rgb(255, 0, 68); min-height: 80px;"
>
  <div
    class=" _WrapperRSWP __5fskss"
    data-component-name="Wrapper"
  >
    <div
      class="rswp__active _InfoRSWP __pkinha"
      data-component-name="Info"
    >
      <a
        aria-label="Main Theme From Trouble Man on SPOTIFY"
        href="https://open.spotify.com/track/6KUjwoHktuX3du8laPVfO8"
        rel="noreferrer"
        target="_blank"
        title="Main Theme From Trouble Man on SPOTIFY"
      >
        <img
          alt="Main Theme From Trouble Man"
          src="https://i.scdn.co/image/10b3bd8afaf3dfa1f302b8f58e059e9802144052"
        />
      </a>
      <div
        class=" _ContentWrapperRSWP __1gmrvbw"
      >
        <div
          class=" _ContentRSWP __1xwov57"
        >
          <div
            data-type="title-artist-wrapper"
          >
            <div>
              <p>
                <span>
                  <a
                    aria-label="Main Theme From Trouble Man on SPOTIFY"
                    href="https://open.spotify.com/track/6KUjwoHktuX3du8laPVfO8"
                    rel="noreferrer"
                    target="_blank"
                    title="Main Theme From Trouble Man on SPOTIFY"
                  >
                    Main Theme From Trouble Man
                  </a>
                </span>
              </p>
              <p
                title="Marvin Gaye"
              >
                <span>
                  <a
                    aria-label="Marvin Gaye on SPOTIFY"
                    href="https://open.spotify.com/artist/3koiLjNrgRTNbOwViDipeA"
                    rel="noreferrer"
                    target="_blank"
                    title="Marvin Gaye on SPOTIFY"
                  >
                    Marvin Gaye
                  </a>
                </span>
              </p>
            </div>
          </div>
        </div>
        <a
          aria-label="Play on Spotify"
          href="https://open.spotify.com/track/6KUjwoHktuX3du8laPVfO8"
          rel="noreferrer"
          target="_blank"
        >
          <svg
            height="1em"
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 512 160"
            width="3.2em"
          >
            <path
              d="M79.655 0C35.664 0 0 35.663 0 79.654c0 43.993 35.664 79.653 79.655 79.653 43.996 0 79.656-35.66 79.656-79.653 0-43.988-35.66-79.65-79.657-79.65L79.655 0Zm36.53 114.884a4.963 4.963 0 0 1-6.83 1.646c-18.702-11.424-42.246-14.011-69.973-7.676a4.967 4.967 0 0 1-5.944-3.738 4.958 4.958 0 0 1 3.734-5.945c30.343-6.933 56.37-3.948 77.367 8.884a4.965 4.965 0 0 1 1.645 6.83Zm9.75-21.689c-1.799 2.922-5.622 3.845-8.543 2.047-21.41-13.16-54.049-16.972-79.374-9.284a6.219 6.219 0 0 1-7.75-4.138 6.22 6.22 0 0 1 4.141-7.745c28.929-8.778 64.892-4.526 89.48 10.583 2.92 1.798 3.843 5.622 2.045 8.538Zm.836-22.585C101.1 55.362 58.742 53.96 34.231 61.4c-3.936 1.194-8.098-1.028-9.29-4.964a7.453 7.453 0 0 1 4.965-9.294c28.137-8.542 74.912-6.892 104.469 10.655a7.441 7.441 0 0 1 2.606 10.209c-2.092 3.54-6.677 4.707-10.206 2.605h-.004Zm89.944 2.922c-13.754-3.28-16.198-5.581-16.198-10.418 0-4.57 4.299-7.645 10.7-7.645 6.202 0 12.347 2.336 18.796 7.143.19.145.437.203.675.165a.888.888 0 0 0 .6-.367l6.715-9.466a.903.903 0 0 0-.171-1.225c-7.676-6.157-16.313-9.15-26.415-9.15-14.848 0-25.225 8.911-25.225 21.662 0 13.673 8.95 18.515 24.417 22.252 13.155 3.031 15.38 5.57 15.38 10.11 0 5.032-4.49 8.161-11.718 8.161-8.028 0-14.582-2.71-21.906-9.046a.932.932 0 0 0-.656-.218.89.89 0 0 0-.619.313l-7.533 8.96a.906.906 0 0 0 .086 1.256c8.522 7.61 19.004 11.624 30.323 11.624 16 0 26.339-8.742 26.339-22.277.028-11.421-6.81-17.746-23.561-21.821l-.029-.013Zm59.792-13.564c-6.934 0-12.622 2.732-17.321 8.33v-6.3c0-.498-.4-.903-.894-.903h-12.318a.899.899 0 0 0-.894.902v70.009c0 .494.4.903.894.903h12.318a.901.901 0 0 0 .894-.903v-22.097c4.699 5.26 10.387 7.838 17.32 7.838 12.89 0 25.94-9.92 25.94-28.886.019-18.97-13.032-28.894-25.93-28.894l-.01.001Zm11.614 28.893c0 9.653-5.945 16.397-14.468 16.397-8.418 0-14.772-7.048-14.772-16.397 0-9.35 6.354-16.397 14.772-16.397 8.38 0 14.468 6.893 14.468 16.396Zm47.759-28.893c-16.598 0-29.601 12.78-29.601 29.1 0 16.143 12.917 28.784 29.401 28.784 16.655 0 29.696-12.736 29.696-28.991 0-16.2-12.955-28.89-29.496-28.89v-.003Zm0 45.385c-8.827 0-15.485-7.096-15.485-16.497 0-9.444 6.43-16.298 15.285-16.298 8.884 0 15.58 7.093 15.58 16.504 0 9.443-6.468 16.291-15.38 16.291Zm64.937-44.258h-13.554V47.24c0-.497-.4-.902-.894-.902H374.05a.906.906 0 0 0-.904.902v13.855h-5.916a.899.899 0 0 0-.894.902v10.584a.9.9 0 0 0 .894.903h5.916v27.39c0 11.062 5.508 16.674 16.38 16.674 4.413 0 8.075-.914 11.528-2.873a.88.88 0 0 0 .457-.78v-10.083a.896.896 0 0 0-.428-.76.873.873 0 0 0-.876-.039c-2.368 1.19-4.66 1.741-7.229 1.741-3.947 0-5.716-1.798-5.716-5.812V73.49h13.554a.899.899 0 0 0 .894-.903V62.003a.873.873 0 0 0-.884-.903l-.01-.005Zm47.217.054v-1.702c0-5.006 1.921-7.238 6.22-7.238 2.57 0 4.633.51 6.945 1.28a.895.895 0 0 0 1.18-.858l-.001-10.377a.891.891 0 0 0-.637-.865c-2.435-.726-5.555-1.47-10.235-1.47-11.367 0-17.388 6.405-17.388 18.516v2.606h-5.916a.906.906 0 0 0-.904.902v10.638c0 .497.41.903.904.903h5.916v42.237c0 .504.41.904.904.904h12.308c.504 0 .904-.4.904-.904V73.487h11.5l17.616 42.234c-1.998 4.433-3.967 5.317-6.65 5.317-2.168 0-4.46-.646-6.79-1.93a.98.98 0 0 0-.714-.067.896.896 0 0 0-.533.485l-4.175 9.16a.9.9 0 0 0 .39 1.17c4.356 2.359 8.284 3.367 13.145 3.367 9.093 0 14.125-4.242 18.548-15.637l21.364-55.204a.88.88 0 0 0-.095-.838.878.878 0 0 0-.733-.392h-12.822a.901.901 0 0 0-.856.605l-13.136 37.509-14.382-37.534a.898.898 0 0 0-.837-.58h-21.04v-.003Zm-27.375-.054h-12.318a.907.907 0 0 0-.903.902v53.724c0 .504.409.904.903.904h12.318c.495 0 .904-.4.904-.904v-53.72a.9.9 0 0 0-.904-.903v-.003Zm-6.088-24.464c-4.88 0-8.836 3.95-8.836 8.828a8.835 8.835 0 0 0 8.836 8.836c4.88 0 8.827-3.954 8.827-8.836a8.83 8.83 0 0 0-8.827-8.828Z"
              fill="#ffffff"
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      class=" _ControlsRSWP __anzta0"
      data-component-name="Controls"
      data-playing="false"
    >
      <div
        class=" _ControlsButtonsRSWP __bd4m75"
      >
        <div
          class="rswp__devices"
        >
          <div>
            <div
              class=" _DevicesRSWP __ix65sv"
              data-component-name="Devices"
              data-device-id="19ks98hfbxc53vh34jd"
            >
              <button
                aria-label="Devices"
                class="ButtonRSWP"
                title="Devices"
                type="button"
              >
                <svg
                  height="1em"
                  preserveAspectRatio="xMidYMid"
                  viewBox="0 0 64 64"
                  width="1em"
                >
                  <path
                    d="M57 4c3.864 0 7 3.136 7 7v42a7 7 0 0 1-7 7H31a7 7 0 0 1-7-7V11c0-3.864 3.136-7 7-7h26ZM16 54v6H8v-6h8Zm41-44H31a1 1 0 0 0-1 1v42a1 1 0 0 0 1 1h26a1 1 0 0 0 1-1V11a1 1 0 0 0-1-1ZM44 32a8 8 0 1 1 0 16 8 8 0 0 1 0-16ZM16 4v6H7a1 1 0 0 0-1 1v26a1 1 0 0 0 1 1h9v6H7a7 7 0 0 1-7-7V11c0-3.864 3.136-7 7-7h9Zm28 12a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div />
        <div>
          <button
            aria-label="Previous"
            class="ButtonRSWP _ControlsButtonRSWP __3hmsj"
            title="Previous"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M10.514 0a3.2 3.2 0 0 1 3.2 3.2v23.543L59.2.489A3.2 3.2 0 0 1 64 3.255V60.74a3.2 3.2 0 0 1-4.8 2.774L13.714 37.253V60.8a3.2 3.2 0 0 1-3.2 3.2H3.2A3.2 3.2 0 0 1 0 60.8V3.2A3.2 3.2 0 0 1 3.2 0h7.314Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            aria-label="Play"
            class="ButtonRSWP rswp__toggle _ControlsButtonRSWP __3hmsj"
            title="Play"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm-7.61 18.188c-.435.251-.702.715-.701 1.216v25.194a1.402 1.402 0 0 0 2.104 1.214L47.61 33.214a1.402 1.402 0 0 0 0-2.428L25.793 18.188c-.435-.25-.97-.25-1.404 0Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            aria-label="Next"
            class="ButtonRSWP _ControlsButtonRSWP __3hmsj"
            title="Next"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M53.486 0a3.2 3.2 0 0 0-3.2 3.2v23.543L4.8.489A3.2 3.2 0 0 0 0 3.255V60.74a3.2 3.2 0 0 0 4.8 2.774l45.486-26.262V60.8a3.2 3.2 0 0 0 3.2 3.2H60.8a3.2 3.2 0 0 0 3.2-3.2V3.2A3.2 3.2 0 0 0 60.8 0h-7.314Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div />
        <div
          class="rswp__volume"
        >
          <div>
            <div
              class=" _VolumeRSWP __me2fpj"
              data-component-name="Volume"
              data-value="1"
            >
              <button
                aria-label="Volume"
                class="ButtonRSWP"
                title="Volume"
                type="button"
              >
                <svg
                  data-component-name="VolumeHigh"
                  height="1em"
                  preserveAspectRatio="xMidYMid"
                  viewBox="0 0 64 64"
                  width="1em"
                >
                  <path
                    d="M37.963 3.402a2.989 2.989 0 0 1 1.5 2.596v52a3 3 0 0 1-4.5 2.6l-27.7-16C.32 40.572-2.06 31.688 1.943 24.73a14.556 14.556 0 0 1 5.32-5.328l27.7-16a3 3 0 0 1 3 0ZM45 9.542a23.008 23.008 0 0 1 0 44.912V48.25a17.008 17.008 0 0 0 0-32.508Zm-11.532 1.656-23.2 13.4a8.556 8.556 0 0 0 0 14.8l23.2 13.4v-41.6ZM45 22.238a11 11 0 0 1 0 19.52v-19.52Z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" _SliderRSWP __1lztbt5"
        data-component-name="Slider"
        data-position="0"
      >
        <div
          class="rswp_progress"
        >
          0:00
        </div>
        <div
          class="slider"
          data-component-name="progress-bar"
          style="box-sizing: border-box; display: inline-block; padding: 0px; transition: height 0.4s, width 0.4s; height: 4px; width: 100%;"
        >
          <div
            class="slider__track"
            role="presentation"
            style="background-color: rgb(204, 204, 204); border-radius: 4px; box-sizing: border-box; height: 4px; position: relative; width: 100%;"
          >
            <div
              class="slider__range"
              style="width: 0%; background-color: rgb(102, 102, 102); border-radius: 4px; position: absolute; height: 100%; top: 0px;"
            />
            <div
              role="presentation"
              style="box-sizing: border-box; height: 4px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 0%; bottom: 0%;"
            >
              <span
                aria-label="slider handle"
                aria-orientation="horizontal"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="slider__thumb"
                role="slider"
                style="background-color: rgb(0, 0, 0); border: 0px; border-radius: 50%; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 10px; left: -5px; top: -3px; width: 10px;"
                tabindex="0"
              />
            </div>
          </div>
        </div>
        <div
          class="rswp_duration"
        >
          2:31
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SpotifyWebPlayer > With "components" prop > should render the components 1`] = `
<div
  class=" _ControlsRSWP __11aa6ep"
  data-component-name="Controls"
  data-playing="false"
>
  <div
    class=" _ControlsButtonsRSWP __a3qe0k"
  >
    <div
      class="rswp__devices"
    >
      <div>
        <div
          class=" _DevicesRSWP __10w631a"
          data-component-name="Devices"
          data-device-id="19ks98hfbxc53vh34jd"
        >
          <button
            aria-label="Devices"
            class="ButtonRSWP"
            title="Devices"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M57 4c3.864 0 7 3.136 7 7v42a7 7 0 0 1-7 7H31a7 7 0 0 1-7-7V11c0-3.864 3.136-7 7-7h26ZM16 54v6H8v-6h8Zm41-44H31a1 1 0 0 0-1 1v42a1 1 0 0 0 1 1h26a1 1 0 0 0 1-1V11a1 1 0 0 0-1-1ZM44 32a8 8 0 1 1 0 16 8 8 0 0 1 0-16ZM16 4v6H7a1 1 0 0 0-1 1v26a1 1 0 0 0 1 1h9v6H7a7 7 0 0 1-7-7V11c0-3.864 3.136-7 7-7h9Zm28 12a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div>
      <button
        type="button"
      >
        Left
      </button>
    </div>
    <div>
      <button
        aria-label="Previous"
        class="ButtonRSWP _ControlsButtonRSWP __3hmsj"
        title="Previous"
        type="button"
      >
        <svg
          height="1em"
          preserveAspectRatio="xMidYMid"
          viewBox="0 0 64 64"
          width="1em"
        >
          <path
            d="M10.514 0a3.2 3.2 0 0 1 3.2 3.2v23.543L59.2.489A3.2 3.2 0 0 1 64 3.255V60.74a3.2 3.2 0 0 1-4.8 2.774L13.714 37.253V60.8a3.2 3.2 0 0 1-3.2 3.2H3.2A3.2 3.2 0 0 1 0 60.8V3.2A3.2 3.2 0 0 1 3.2 0h7.314Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div>
      <button
        aria-label="Play"
        class="ButtonRSWP rswp__toggle _ControlsButtonRSWP __3hmsj"
        title="Play"
        type="button"
      >
        <svg
          height="1em"
          preserveAspectRatio="xMidYMid"
          viewBox="0 0 64 64"
          width="1em"
        >
          <path
            d="M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm-7.61 18.188c-.435.251-.702.715-.701 1.216v25.194a1.402 1.402 0 0 0 2.104 1.214L47.61 33.214a1.402 1.402 0 0 0 0-2.428L25.793 18.188c-.435-.25-.97-.25-1.404 0Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div>
      <button
        aria-label="Next"
        class="ButtonRSWP _ControlsButtonRSWP __3hmsj"
        title="Next"
        type="button"
      >
        <svg
          height="1em"
          preserveAspectRatio="xMidYMid"
          viewBox="0 0 64 64"
          width="1em"
        >
          <path
            d="M53.486 0a3.2 3.2 0 0 0-3.2 3.2v23.543L4.8.489A3.2 3.2 0 0 0 0 3.255V60.74a3.2 3.2 0 0 0 4.8 2.774l45.486-26.262V60.8a3.2 3.2 0 0 0 3.2 3.2H60.8a3.2 3.2 0 0 0 3.2-3.2V3.2A3.2 3.2 0 0 0 60.8 0h-7.314Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
    <div>
      <button
        type="button"
      >
        Right
      </button>
    </div>
    <div
      class="rswp__volume"
    >
      <div
        class=" _VolumeInlineRSWP __a3qe0k"
        data-component-name="Volume"
        data-value="1"
      >
        <span>
          <svg
            data-component-name="VolumeHigh"
            height="1em"
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 64 64"
            width="1em"
          >
            <path
              d="M37.963 3.402a2.989 2.989 0 0 1 1.5 2.596v52a3 3 0 0 1-4.5 2.6l-27.7-16C.32 40.572-2.06 31.688 1.943 24.73a14.556 14.556 0 0 1 5.32-5.328l27.7-16a3 3 0 0 1 3 0ZM45 9.542a23.008 23.008 0 0 1 0 44.912V48.25a17.008 17.008 0 0 0 0-32.508Zm-11.532 1.656-23.2 13.4a8.556 8.556 0 0 0 0 14.8l23.2 13.4v-41.6ZM45 22.238a11 11 0 0 1 0 19.52v-19.52Z"
              fill="currentColor"
            />
          </svg>
        </span>
        <div>
          <div
            class="volume"
            data-component-name="volume-bar"
            style="box-sizing: border-box; display: inline-block; padding: 0px; transition: height 0.4s, width 0.4s; height: 4px; width: 100%;"
          >
            <div
              class="volume__track"
              role="presentation"
              style="background-color: rgb(204, 204, 204); border-radius: 4px; box-sizing: border-box; height: 4px; position: relative; width: 100%;"
            >
              <div
                class="volume__range"
                style="width: 100%; background-color: rgb(102, 102, 102); border-radius: 4px; position: absolute; height: 100%; top: 0px;"
              />
              <div
                role="presentation"
                style="box-sizing: border-box; height: 4px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 100%; bottom: 0%;"
              >
                <span
                  aria-label="slider handle"
                  aria-orientation="horizontal"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="100"
                  class="volume__thumb"
                  role="slider"
                  style="background-color: rgb(0, 0, 0); border: 0px; border-radius: 50%; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 10px; left: -5px; top: -3px; width: 10px;"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class=" _SliderRSWP __q14q70"
    data-component-name="Slider"
    data-position="0"
  >
    <div
      class="rswp_progress"
    >
      0:00
    </div>
    <div
      class="slider"
      data-component-name="progress-bar"
      style="box-sizing: border-box; display: inline-block; padding: 0px; transition: height 0.4s, width 0.4s; height: 4px; width: 100%;"
    >
      <div
        class="slider__track"
        role="presentation"
        style="background-color: rgb(204, 204, 204); border-radius: 4px; box-sizing: border-box; height: 4px; position: relative; width: 100%;"
      >
        <div
          class="slider__range"
          style="width: 0%; background-color: rgb(102, 102, 102); border-radius: 4px; position: absolute; height: 100%; top: 0px;"
        />
        <div
          role="presentation"
          style="box-sizing: border-box; height: 4px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 0%; bottom: 0%;"
        >
          <span
            aria-label="slider handle"
            aria-orientation="horizontal"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            class="slider__thumb"
            role="slider"
            style="background-color: rgb(0, 0, 0); border: 0px; border-radius: 50%; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 10px; left: -5px; top: -3px; width: 10px;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
    <div
      class="rswp_duration"
    >
      2:31
    </div>
  </div>
</div>
`;

exports[`SpotifyWebPlayer > With the local player > should render the full UI 1`] = `
<div
  class="PlayerRSWP"
  data-component-name="Player"
  data-ready="true"
  style="background: rgb(255, 255, 255); min-height: 80px;"
>
  <div
    class=" _WrapperRSWP __1g3et1y"
    data-component-name="Wrapper"
  >
    <div
      class="rswp__active _InfoRSWP __1jmym9x"
      data-component-name="Info"
    >
      <a
        aria-label="Main Theme From Trouble Man on SPOTIFY"
        href="https://open.spotify.com/track/6KUjwoHktuX3du8laPVfO8"
        rel="noreferrer"
        target="_blank"
        title="Main Theme From Trouble Man on SPOTIFY"
      >
        <img
          alt="Main Theme From Trouble Man"
          src="https://i.scdn.co/image/10b3bd8afaf3dfa1f302b8f58e059e9802144052"
        />
      </a>
      <div
        class=" _ContentWrapperRSWP __1c53jt9"
      >
        <div
          class=" _ContentRSWP __mdrp5m"
        >
          <div
            data-type="title-artist-wrapper"
          >
            <div>
              <p>
                <span>
                  <a
                    aria-label="Main Theme From Trouble Man on SPOTIFY"
                    href="https://open.spotify.com/track/6KUjwoHktuX3du8laPVfO8"
                    rel="noreferrer"
                    target="_blank"
                    title="Main Theme From Trouble Man on SPOTIFY"
                  >
                    Main Theme From Trouble Man
                  </a>
                </span>
              </p>
              <p
                title="Marvin Gaye"
              >
                <span>
                  <a
                    aria-label="Marvin Gaye on SPOTIFY"
                    href="https://open.spotify.com/artist/3koiLjNrgRTNbOwViDipeA"
                    rel="noreferrer"
                    target="_blank"
                    title="Marvin Gaye on SPOTIFY"
                  >
                    Marvin Gaye
                  </a>
                </span>
              </p>
            </div>
          </div>
          <button
            aria-label="Save to your favorites"
            class="ButtonRSWP"
            title="Save to your favorites"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M5.944 7.206C13.271.3 24.723.34 31.999 7.3A18.924 18.924 0 0 1 48.02 2.32h.008a19.068 19.068 0 0 1 15.617 15.071v.013A18.759 18.759 0 0 1 59.47 33.26L37.573 59.353a7.288 7.288 0 0 1-8.642 1.916 7.276 7.276 0 0 1-2.498-1.912l-21.901-26.1c-6.55-7.671-5.93-19.131 1.408-26.051h.004Zm13.04 1.04a12.726 12.726 0 0 0-9.737 20.997l.021.02 21.905 26.105c.316.372.84.488 1.284.285.143-.066.27-.164.372-.285l21.934-26.137a12.565 12.565 0 0 0 2.808-10.625 12.875 12.875 0 0 0-10.534-10.17 12.714 12.714 0 0 0-10.785 3.37l-.029.029a6.198 6.198 0 0 1-8.444 0l-.037-.033a12.727 12.727 0 0 0-8.758-3.556Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <a
          aria-label="Play on Spotify"
          href="https://open.spotify.com/track/6KUjwoHktuX3du8laPVfO8"
          rel="noreferrer"
          target="_blank"
        >
          <svg
            height="1em"
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 512 160"
            width="3.2em"
          >
            <path
              d="M79.655 0C35.664 0 0 35.663 0 79.654c0 43.993 35.664 79.653 79.655 79.653 43.996 0 79.656-35.66 79.656-79.653 0-43.988-35.66-79.65-79.657-79.65L79.655 0Zm36.53 114.884a4.963 4.963 0 0 1-6.83 1.646c-18.702-11.424-42.246-14.011-69.973-7.676a4.967 4.967 0 0 1-5.944-3.738 4.958 4.958 0 0 1 3.734-5.945c30.343-6.933 56.37-3.948 77.367 8.884a4.965 4.965 0 0 1 1.645 6.83Zm9.75-21.689c-1.799 2.922-5.622 3.845-8.543 2.047-21.41-13.16-54.049-16.972-79.374-9.284a6.219 6.219 0 0 1-7.75-4.138 6.22 6.22 0 0 1 4.141-7.745c28.929-8.778 64.892-4.526 89.48 10.583 2.92 1.798 3.843 5.622 2.045 8.538Zm.836-22.585C101.1 55.362 58.742 53.96 34.231 61.4c-3.936 1.194-8.098-1.028-9.29-4.964a7.453 7.453 0 0 1 4.965-9.294c28.137-8.542 74.912-6.892 104.469 10.655a7.441 7.441 0 0 1 2.606 10.209c-2.092 3.54-6.677 4.707-10.206 2.605h-.004Zm89.944 2.922c-13.754-3.28-16.198-5.581-16.198-10.418 0-4.57 4.299-7.645 10.7-7.645 6.202 0 12.347 2.336 18.796 7.143.19.145.437.203.675.165a.888.888 0 0 0 .6-.367l6.715-9.466a.903.903 0 0 0-.171-1.225c-7.676-6.157-16.313-9.15-26.415-9.15-14.848 0-25.225 8.911-25.225 21.662 0 13.673 8.95 18.515 24.417 22.252 13.155 3.031 15.38 5.57 15.38 10.11 0 5.032-4.49 8.161-11.718 8.161-8.028 0-14.582-2.71-21.906-9.046a.932.932 0 0 0-.656-.218.89.89 0 0 0-.619.313l-7.533 8.96a.906.906 0 0 0 .086 1.256c8.522 7.61 19.004 11.624 30.323 11.624 16 0 26.339-8.742 26.339-22.277.028-11.421-6.81-17.746-23.561-21.821l-.029-.013Zm59.792-13.564c-6.934 0-12.622 2.732-17.321 8.33v-6.3c0-.498-.4-.903-.894-.903h-12.318a.899.899 0 0 0-.894.902v70.009c0 .494.4.903.894.903h12.318a.901.901 0 0 0 .894-.903v-22.097c4.699 5.26 10.387 7.838 17.32 7.838 12.89 0 25.94-9.92 25.94-28.886.019-18.97-13.032-28.894-25.93-28.894l-.01.001Zm11.614 28.893c0 9.653-5.945 16.397-14.468 16.397-8.418 0-14.772-7.048-14.772-16.397 0-9.35 6.354-16.397 14.772-16.397 8.38 0 14.468 6.893 14.468 16.396Zm47.759-28.893c-16.598 0-29.601 12.78-29.601 29.1 0 16.143 12.917 28.784 29.401 28.784 16.655 0 29.696-12.736 29.696-28.991 0-16.2-12.955-28.89-29.496-28.89v-.003Zm0 45.385c-8.827 0-15.485-7.096-15.485-16.497 0-9.444 6.43-16.298 15.285-16.298 8.884 0 15.58 7.093 15.58 16.504 0 9.443-6.468 16.291-15.38 16.291Zm64.937-44.258h-13.554V47.24c0-.497-.4-.902-.894-.902H374.05a.906.906 0 0 0-.904.902v13.855h-5.916a.899.899 0 0 0-.894.902v10.584a.9.9 0 0 0 .894.903h5.916v27.39c0 11.062 5.508 16.674 16.38 16.674 4.413 0 8.075-.914 11.528-2.873a.88.88 0 0 0 .457-.78v-10.083a.896.896 0 0 0-.428-.76.873.873 0 0 0-.876-.039c-2.368 1.19-4.66 1.741-7.229 1.741-3.947 0-5.716-1.798-5.716-5.812V73.49h13.554a.899.899 0 0 0 .894-.903V62.003a.873.873 0 0 0-.884-.903l-.01-.005Zm47.217.054v-1.702c0-5.006 1.921-7.238 6.22-7.238 2.57 0 4.633.51 6.945 1.28a.895.895 0 0 0 1.18-.858l-.001-10.377a.891.891 0 0 0-.637-.865c-2.435-.726-5.555-1.47-10.235-1.47-11.367 0-17.388 6.405-17.388 18.516v2.606h-5.916a.906.906 0 0 0-.904.902v10.638c0 .497.41.903.904.903h5.916v42.237c0 .504.41.904.904.904h12.308c.504 0 .904-.4.904-.904V73.487h11.5l17.616 42.234c-1.998 4.433-3.967 5.317-6.65 5.317-2.168 0-4.46-.646-6.79-1.93a.98.98 0 0 0-.714-.067.896.896 0 0 0-.533.485l-4.175 9.16a.9.9 0 0 0 .39 1.17c4.356 2.359 8.284 3.367 13.145 3.367 9.093 0 14.125-4.242 18.548-15.637l21.364-55.204a.88.88 0 0 0-.095-.838.878.878 0 0 0-.733-.392h-12.822a.901.901 0 0 0-.856.605l-13.136 37.509-14.382-37.534a.898.898 0 0 0-.837-.58h-21.04v-.003Zm-27.375-.054h-12.318a.907.907 0 0 0-.903.902v53.724c0 .504.409.904.903.904h12.318c.495 0 .904-.4.904-.904v-53.72a.9.9 0 0 0-.904-.903v-.003Zm-6.088-24.464c-4.88 0-8.836 3.95-8.836 8.828a8.835 8.835 0 0 0 8.836 8.836c4.88 0 8.827-3.954 8.827-8.836a8.83 8.83 0 0 0-8.827-8.828Z"
              fill="#000000"
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      class=" _ControlsRSWP __11aa6ep"
      data-component-name="Controls"
      data-playing="true"
    >
      <div
        class=" _ControlsButtonsRSWP __a3qe0k"
      >
        <div
          class="rswp__devices"
        >
          <div>
            <div
              class=" _DevicesRSWP __n5xkwq"
              data-component-name="Devices"
              data-device-id="19ks98hfbxc53vh34jd"
            >
              <button
                aria-label="Devices"
                class="ButtonRSWP"
                title="Devices"
                type="button"
              >
                <svg
                  height="1em"
                  preserveAspectRatio="xMidYMid"
                  viewBox="0 0 64 64"
                  width="1em"
                >
                  <path
                    d="M57 4c3.864 0 7 3.136 7 7v42a7 7 0 0 1-7 7H31a7 7 0 0 1-7-7V11c0-3.864 3.136-7 7-7h26ZM16 54v6H8v-6h8Zm41-44H31a1 1 0 0 0-1 1v42a1 1 0 0 0 1 1h26a1 1 0 0 0 1-1V11a1 1 0 0 0-1-1ZM44 32a8 8 0 1 1 0 16 8 8 0 0 1 0-16ZM16 4v6H7a1 1 0 0 0-1 1v26a1 1 0 0 0 1 1h9v6H7a7 7 0 0 1-7-7V11c0-3.864 3.136-7 7-7h9Zm28 12a4 4 0 1 1 0 8 4 4 0 0 1 0-8Z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div />
        <div>
          <button
            aria-label="Previous"
            class="ButtonRSWP _ControlsButtonRSWP __3hmsj"
            title="Previous"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M10.514 0a3.2 3.2 0 0 1 3.2 3.2v23.543L59.2.489A3.2 3.2 0 0 1 64 3.255V60.74a3.2 3.2 0 0 1-4.8 2.774L13.714 37.253V60.8a3.2 3.2 0 0 1-3.2 3.2H3.2A3.2 3.2 0 0 1 0 60.8V3.2A3.2 3.2 0 0 1 3.2 0h7.314Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            aria-label="Pause"
            class="ButtonRSWP rswp__toggle _ControlsButtonRSWP __3hmsj"
            title="Pause"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm-5.4 18h-5.2a1.4 1.4 0 0 0-1.4 1.4v25.2a1.4 1.4 0 0 0 1.4 1.4h5.2a1.4 1.4 0 0 0 1.4-1.4V19.4a1.4 1.4 0 0 0-1.4-1.4Zm16 0h-5.2a1.4 1.4 0 0 0-1.4 1.4v25.2a1.4 1.4 0 0 0 1.4 1.4h5.2a1.4 1.4 0 0 0 1.4-1.4V19.4a1.4 1.4 0 0 0-1.4-1.4Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div>
          <button
            aria-label="Next"
            class="ButtonRSWP _ControlsButtonRSWP __3hmsj"
            title="Next"
            type="button"
          >
            <svg
              height="1em"
              preserveAspectRatio="xMidYMid"
              viewBox="0 0 64 64"
              width="1em"
            >
              <path
                d="M53.486 0a3.2 3.2 0 0 0-3.2 3.2v23.543L4.8.489A3.2 3.2 0 0 0 0 3.255V60.74a3.2 3.2 0 0 0 4.8 2.774l45.486-26.262V60.8a3.2 3.2 0 0 0 3.2 3.2H60.8a3.2 3.2 0 0 0 3.2-3.2V3.2A3.2 3.2 0 0 0 60.8 0h-7.314Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
        <div />
        <div
          class="rswp__volume"
        >
          <div
            class=" _VolumeInlineRSWP __a3qe0k"
            data-component-name="Volume"
            data-value="1"
          >
            <span>
              <svg
                data-component-name="VolumeHigh"
                height="1em"
                preserveAspectRatio="xMidYMid"
                viewBox="0 0 64 64"
                width="1em"
              >
                <path
                  d="M37.963 3.402a2.989 2.989 0 0 1 1.5 2.596v52a3 3 0 0 1-4.5 2.6l-27.7-16C.32 40.572-2.06 31.688 1.943 24.73a14.556 14.556 0 0 1 5.32-5.328l27.7-16a3 3 0 0 1 3 0ZM45 9.542a23.008 23.008 0 0 1 0 44.912V48.25a17.008 17.008 0 0 0 0-32.508Zm-11.532 1.656-23.2 13.4a8.556 8.556 0 0 0 0 14.8l23.2 13.4v-41.6ZM45 22.238a11 11 0 0 1 0 19.52v-19.52Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div>
              <div
                class="volume"
                data-component-name="volume-bar"
                style="box-sizing: border-box; display: inline-block; padding: 0px; transition: height 0.4s, width 0.4s; height: 4px; width: 100%;"
              >
                <div
                  class="volume__track"
                  role="presentation"
                  style="background-color: rgb(204, 204, 204); border-radius: 4px; box-sizing: border-box; height: 4px; position: relative; width: 100%;"
                >
                  <div
                    class="volume__range"
                    style="width: 100%; background-color: rgb(102, 102, 102); border-radius: 4px; position: absolute; height: 100%; top: 0px;"
                  />
                  <div
                    role="presentation"
                    style="box-sizing: border-box; height: 4px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 100%; bottom: 0%;"
                  >
                    <span
                      aria-label="slider handle"
                      aria-orientation="horizontal"
                      aria-valuemax="100"
                      aria-valuemin="0"
                      aria-valuenow="100"
                      class="volume__thumb"
                      role="slider"
                      style="background-color: rgb(0, 0, 0); border: 0px; border-radius: 50%; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 10px; left: -5px; top: -3px; width: 10px;"
                      tabindex="0"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" _SliderRSWP __q14q70"
        data-component-name="Slider"
        data-position="0"
      >
        <div
          class="rswp_progress"
        >
          0:00
        </div>
        <div
          class="slider"
          data-component-name="progress-bar"
          style="box-sizing: border-box; display: inline-block; padding: 0px; transition: height 0.4s, width 0.4s; height: 4px; width: 100%;"
        >
          <div
            class="slider__track"
            role="presentation"
            style="background-color: rgb(204, 204, 204); border-radius: 4px; box-sizing: border-box; height: 4px; position: relative; width: 100%;"
          >
            <div
              class="slider__range"
              style="width: 0%; background-color: rgb(102, 102, 102); border-radius: 4px; position: absolute; height: 100%; top: 0px;"
            />
            <div
              role="presentation"
              style="box-sizing: border-box; height: 4px; position: absolute; transition: height 0.4s, width 0.4s; width: 20px; left: 0%; bottom: 0%;"
            >
              <span
                aria-label="slider handle"
                aria-orientation="horizontal"
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="slider__thumb"
                role="slider"
                style="background-color: rgb(0, 0, 0); border: 0px; border-radius: 50%; box-sizing: border-box; display: block; position: absolute; transition: height 0.4s, width 0.4s; height: 10px; left: -5px; top: -3px; width: 10px;"
                tabindex="0"
              />
            </div>
          </div>
        </div>
        <div
          class="rswp_duration"
        >
          2:31
        </div>
      </div>
    </div>
  </div>
</div>
`;
